--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
