--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.2",
     "axios": "^1.6.5",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0"
