--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.2",
+    "antd-img-crop": "^4.21.0",
     "axios": "^1.6.5",
+    "firebase": "^10.7.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
