--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.2",
     "antd-img-crop": "^4.21.0",
+    "aos": "^2.3.4",
     "axios": "^1.6.5",
     "firebase": "^10.7.2",
     "font-awesome": "^4.7.0",
