--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
+    "react-slick": "^0.30.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
