--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
@@ -21,6 +23,7 @@
     "firebase": "^10.7.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
+    "lucide-react": "^0.320.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
