--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "@nivo/bar": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.2",
     "antd-img-crop": "^4.21.0",
