--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.13.2",
     "antd-img-crop": "^4.21.0",
+    "antd-style": "^3.6.1",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
     "firebase": "^10.7.2",
