--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3",
+    "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.30.1",
+    "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1"
