--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd-style": "^3.6.1",
     "aos": "^2.3.4",
     "axios": "^1.6.5",
+    "chroma-js": "^2.4.2",
     "firebase": "^10.7.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
