--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.320.0",
     "moment": "^2.30.1",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
@@ -43,7 +44,10 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.10.5"
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "sweetalert2": "^11.10.5",
+    "web-vitals": "^3.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
