--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nivo/bar": "^0.84.0",
     "@nivo/pie": "^0.84.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "animate.css": "^4.1.1",
     "antd": "^5.13.2",
     "antd-img-crop": "^4.21.0",
     "antd-style": "^3.6.1",
