--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.21.3",
     "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.30.1",
+    "react-wow": "^1.0.0",
     "reactjs-popup": "^2.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
@@ -48,7 +49,9 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "sweetalert2": "^11.10.5",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
