--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
